--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Kitchen & Dining</h2>
-                <div class="box-img" style="background-image: url('/box2_img.jpg');"></div>
+                <div class="box-img" style="background-image: url('box2_img.jpg');"></div>
                 <p><a href="#">Discover more</a></p>
             </div>
         </div>
